manifests/nginx-test-service-nginx-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-test
  name: nginx-test
  annotations:
    external-dns.alpha.kubernetes.io/hostname: demo.robofarming.link 
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-test
  type: ClusterIP
